--- a/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/go-tester.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/go-tester.yaml
@@ -9971,7 +9971,7 @@ testModel:
   mockTest:
     clientFactoryParametersOutput:
       - paramName: subscriptionID
-        paramOutput: subscriptionId
+        paramOutput: '"<subscription-id>"'
     exampleGroups:
       - operationId: Operations_List
         examples:
@@ -10087,7 +10087,7 @@ testModel:
                 parameter: *ref_182
             clientParametersOutput:
               - paramName: subscriptionID
-                paramOutput: subscriptionId
+                paramOutput: '"00000000-0000-0000-0000-000000000000"'
             isLRO: false
             isMultiRespOperation: false
             methodParameters:
@@ -10176,7 +10176,7 @@ testModel:
                 parameter: *ref_182
             clientParametersOutput:
               - paramName: subscriptionID
-                paramOutput: subscriptionId
+                paramOutput: '"00000000-0000-0000-0000-000000000000"'
             isLRO: false
             isMultiRespOperation: false
             isPageable: *ref_460
@@ -10844,7 +10844,7 @@ testModel:
                 parameter: *ref_182
             clientParametersOutput:
               - paramName: subscriptionID
-                paramOutput: subscriptionId
+                paramOutput: '"00000000-0000-0000-0000-000000000000"'
             isLRO: false
             isMultiRespOperation: false
             isPageable: *ref_464
@@ -11519,7 +11519,7 @@ testModel:
                 parameter: *ref_182
             clientParametersOutput:
               - paramName: subscriptionID
-                paramOutput: subscriptionId
+                paramOutput: '"00000000-0000-0000-0000-000000000000"'
             isLRO: false
             isMultiRespOperation: false
             methodParameters:
@@ -12189,7 +12189,7 @@ testModel:
                 parameter: *ref_182
             clientParametersOutput:
               - paramName: subscriptionID
-                paramOutput: subscriptionId
+                paramOutput: '"00000000-0000-0000-0000-000000000000"'
             isLRO: true
             isMultiRespOperation: false
             methodParameters:
@@ -13574,7 +13574,7 @@ testModel:
                 parameter: *ref_182
             clientParametersOutput:
               - paramName: subscriptionID
-                paramOutput: subscriptionId
+                paramOutput: '"00000000-0000-0000-0000-000000000000"'
             isLRO: true
             isMultiRespOperation: false
             methodParameters:
@@ -13629,7 +13629,7 @@ testModel:
                 parameter: *ref_182
             clientParametersOutput:
               - paramName: subscriptionID
-                paramOutput: subscriptionId
+                paramOutput: '"00000000-0000-0000-0000-000000000000"'
             isLRO: true
             isMultiRespOperation: false
             methodParameters:
@@ -14632,7 +14632,7 @@ testModel:
                 parameter: *ref_182
             clientParametersOutput:
               - paramName: subscriptionID
-                paramOutput: subscriptionId
+                paramOutput: '"00000000-0000-0000-0000-000000000000"'
             isLRO: false
             isMultiRespOperation: false
             methodParameters:
@@ -14693,7 +14693,7 @@ testModel:
                 parameter: *ref_182
             clientParametersOutput:
               - paramName: subscriptionID
-                paramOutput: subscriptionId
+                paramOutput: '"00000000-0000-0000-0000-000000000000"'
             isLRO: true
             isMultiRespOperation: false
             methodParameters:
@@ -14766,7 +14766,7 @@ testModel:
                 parameter: *ref_182
             clientParametersOutput:
               - paramName: subscriptionID
-                paramOutput: subscriptionId
+                paramOutput: '"00000000-0000-0000-0000-000000000000"'
             isLRO: true
             isMultiRespOperation: false
             methodParameters:
@@ -14820,7 +14820,7 @@ testModel:
                 parameter: *ref_182
             clientParametersOutput:
               - paramName: subscriptionID
-                paramOutput: subscriptionId
+                paramOutput: '"00000000-0000-0000-0000-000000000000"'
             isLRO: false
             isMultiRespOperation: false
             isPageable: *ref_522
@@ -14966,7 +14966,7 @@ testModel:
                 parameter: *ref_182
             clientParametersOutput:
               - paramName: subscriptionID
-                paramOutput: subscriptionId
+                paramOutput: '"00000000-0000-0000-0000-000000000000"'
             isLRO: false
             isMultiRespOperation: false
             isPageable: *ref_529
@@ -15166,7 +15166,7 @@ testModel:
                 parameter: *ref_182
             clientParametersOutput:
               - paramName: subscriptionID
-                paramOutput: subscriptionId
+                paramOutput: '"00000000-0000-0000-0000-000000000000"'
             isLRO: false
             isMultiRespOperation: false
             methodParameters:
@@ -15361,7 +15361,7 @@ testModel:
                 parameter: *ref_182
             clientParametersOutput:
               - paramName: subscriptionID
-                paramOutput: subscriptionId
+                paramOutput: '"00000000-0000-0000-0000-000000000000"'
             isLRO: false
             isMultiRespOperation: false
             methodParameters:
@@ -15603,7 +15603,7 @@ testModel:
                 parameter: *ref_182
             clientParametersOutput:
               - paramName: subscriptionID
-                paramOutput: subscriptionId
+                paramOutput: '"00000000-0000-0000-0000-000000000000"'
             isLRO: true
             isMultiRespOperation: false
             methodParameters:
@@ -15665,7 +15665,7 @@ testModel:
                 parameter: *ref_182
             clientParametersOutput:
               - paramName: subscriptionID
-                paramOutput: subscriptionId
+                paramOutput: '"00000000-0000-0000-0000-000000000000"'
             isLRO: false
             isMultiRespOperation: false
             isPageable: *ref_564
@@ -15829,7 +15829,7 @@ testModel:
                 parameter: *ref_182
             clientParametersOutput:
               - paramName: subscriptionID
-                paramOutput: subscriptionId
+                paramOutput: '"00000000-0000-0000-0000-000000000000"'
             isLRO: false
             isMultiRespOperation: false
             isPageable: *ref_577
@@ -15956,7 +15956,7 @@ testModel:
                 parameter: *ref_182
             clientParametersOutput:
               - paramName: subscriptionID
-                paramOutput: subscriptionId
+                paramOutput: '"00000000-0000-0000-0000-000000000000"'
             isLRO: false
             isMultiRespOperation: false
             methodParameters:
@@ -16081,7 +16081,7 @@ testModel:
                 parameter: *ref_182
             clientParametersOutput:
               - paramName: subscriptionID
-                paramOutput: subscriptionId
+                paramOutput: '"00000000-0000-0000-0000-000000000000"'
             isLRO: true
             isMultiRespOperation: false
             methodParameters:
@@ -16293,7 +16293,7 @@ testModel:
                 parameter: *ref_182
             clientParametersOutput:
               - paramName: subscriptionID
-                paramOutput: subscriptionId
+                paramOutput: '"00000000-0000-0000-0000-000000000000"'
             isLRO: true
             isMultiRespOperation: false
             methodParameters:
